fixed horizontal scrollable on mobile

--- a/css/smallscreen.css
+++ b/css/smallscreen.css
@@ -10,6 +10,12 @@
     border: 1px solid #dc3545;
 }
 
+.scrollingWrapper {
+    display: flex;
+    flex-wrap: nowrap;
+    overflow-x: scroll;
+}
+
 .scrollingWrapper .card {
     width: 10rem;
     background-color: rgba(255, 255, 255, 0.0);
